# project2

./: .gitignore  CMakeLists.txt  CanadianExperienceApp.cpp  Doxyfile-poly-cylinder.doxy  README.md
Animation/: MainMovie.anim
CanadianExperienceLib/: Actor.cpp  AdapterMachineDrawable.cpp  AdapterMachineDrawable.h  AnimChannelAngle.h  AnimChannelPoint.cpp  CMakeLists.txt  Drawable.h  Picture.cpp  Picture.h  PictureFactory.cpp  SarahFactory.cpp  SarahFactory.h  StartFrameDlg.cpp  StartFrameDlg.h  ViewEdit.cpp  ViewEdit.h
MachineDemo/: CMakeLists.txt  MachineSystemIsolator.h  main.cpp
MachineDemo/MachineDemoLib/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  Config.h.in  ControlPanel.cpp  ControlPanel.h  Controller.cpp  Controller.h  IMachineSystemIsolator.h  MachineDemoBaseApp.cpp  MachineDemoBaseApp.h  MachineDemoMainFrame.cpp  MachineDemoMainFrame.h  MachineView.cpp  MachineView.h  pch.h
MachineLib/: Box.cpp  Box.h  CMakeLists.txt  Cam.cpp  Cam.h  Component.cpp  Component.h  Const.cpp  Const.h  Crank.cpp  Crank.h  Cylinder.cpp  Cylinder.h  IMachineSystem.h  IOpenable.h  IRotationSink.h  Machine.cpp  Machine.h  MachineDialog.cpp  MachineDialog.h  MachineFactories.cpp  MachineFactories.h  MachineStandin.cpp  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  MachineSystemStandin.cpp  MachineSystemStandin.h  MusicBox.cpp  MusicBox.h  Polygon.cpp  Polygon.h  Pulley.cpp  Pulley.h  RotationSource.cpp  RotationSource.h  Shaft.cpp  Shaft.h  Sparty.cpp  Sparty.h  (+1 more)
MachineLib/resources/audio/: README.txt
MachineLib/resources/audio/songs/: fight.xml  pop.xml
MachineTests/: CMakeLists.txt  MachineTest.cpp
resources/xrc/: main.fbp  main.xrc
